[gd_scene load_steps=25 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://custom_tab_container.gd" type="Script" id=2]
[ext_resource path="res://addTab.gd" type="Script" id=3]
[ext_resource path="res://ProjectTree.gd" type="Script" id=4]
[ext_resource path="res://Dialogs.gd" type="Script" id=5]
[ext_resource path="res://Tobborder.gd" type="Script" id=6]
[ext_resource path="res://themes/new_theme.tres" type="Theme" id=7]
[ext_resource path="res://addons/material-design-icons/fonts/material_design_icons.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://addons/material-design-icons/nodes/MaterialButton.gd" type="Script" id=9]
[ext_resource path="res://icons/save.svg" type="Texture" id=10]
[ext_resource path="res://src/storage/table.gd" type="Script" id=11]
[ext_resource path="res://icons/saveall.svg" type="Texture" id=12]
[ext_resource path="res://shortcuts/save.tres" type="ShortCut" id=13]
[ext_resource path="res://icons/apps.png" type="Texture" id=14]
[ext_resource path="res://icons/sync.svg" type="Texture" id=15]
[ext_resource path="res://toggleNode2d.gd" type="Script" id=16]
[ext_resource path="res://actions.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=4]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.462745, 0.423529, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.254902, 0.337255, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )

[node name="AppView" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="AppView"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Tabs" type="Panel" parent="AppView/HBoxContainer"]
margin_right = 55.0
margin_bottom = 600.0
rect_min_size = Vector2( 55, 0 )

[node name="VBoxTabs" type="VBoxContainer" parent="AppView/HBoxContainer/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 50, 0 )

[node name="VSeparator" type="VSeparator" parent="AppView/HBoxContainer/Tabs/VBoxTabs"]
margin_right = 55.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )

[node name="TabButton5" type="Button" parent="AppView/HBoxContainer/Tabs/VBoxTabs"]
margin_left = 7.0
margin_top = 39.0
margin_right = 47.0
margin_bottom = 79.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 1, 0.917647, 0.917647, 1 )
custom_colors/font_color = Color( 0.968627, 0.192157, 0.0431373, 1 )
custom_fonts/font = SubResource( 4 )
text = "Û∞Äª"
script = ExtResource( 9 )
icon_name = "apps"

[node name="TabButton2" type="Button" parent="AppView/HBoxContainer/Tabs/VBoxTabs"]
margin_left = 7.0
margin_top = 83.0
margin_right = 47.0
margin_bottom = 123.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "Û∞ò¶"
script = ExtResource( 9 )
icon_name = "code-json"

[node name="TabButton3" type="Button" parent="AppView/HBoxContainer/Tabs/VBoxTabs"]
margin_left = 7.0
margin_top = 127.0
margin_right = 47.0
margin_bottom = 167.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "Û±áØ"
script = ExtResource( 9 )
icon_name = "state-machine"

[node name="VSeparator2" type="VSeparator" parent="AppView/HBoxContainer/Tabs/VBoxTabs"]
margin_top = 171.0
margin_right = 55.0
margin_bottom = 556.0
size_flags_vertical = 3

[node name="TabButton4" type="Button" parent="AppView/HBoxContainer/Tabs/VBoxTabs"]
margin_left = 7.0
margin_top = 560.0
margin_right = 47.0
margin_bottom = 600.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 7 )
text = "Û∞Äª"
script = ExtResource( 9 )
icon_name = "apps"

[node name="VSplitContainer" type="VSplitContainer" parent="AppView/HBoxContainer"]
margin_left = 59.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 39

[node name="TopPanel" type="Panel" parent="AppView/HBoxContainer/VSplitContainer"]
margin_right = 965.0
margin_bottom = 39.0

[node name="HBoxContainer" type="HBoxContainer" parent="AppView/HBoxContainer/VSplitContainer/TopPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -487.585, -141.599 )

[node name="VSeparator" type="VSeparator" parent="AppView/HBoxContainer/VSplitContainer/TopPanel/HBoxContainer"]
visible = false
margin_right = 20.0
margin_bottom = 39.0
rect_min_size = Vector2( 20, 0 )

[node name="TextureButton" type="TextureButton" parent="AppView/HBoxContainer/VSplitContainer/TopPanel/HBoxContainer"]
visible = false
margin_left = 23.0
margin_right = 63.0
margin_bottom = 39.0
rect_min_size = Vector2( 40, 0 )
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="ToolButton" parent="AppView/HBoxContainer/VSplitContainer/TopPanel/HBoxContainer"]
visible = false
margin_right = 53.0
margin_bottom = 39.0
rect_min_size = Vector2( 50, 0 )
shortcut = ExtResource( 13 )
text = "save"
icon = ExtResource( 10 )

[node name="SaveAll" type="ToolButton" parent="AppView/HBoxContainer/VSplitContainer/TopPanel/HBoxContainer"]
visible = false
margin_left = 56.0
margin_right = 140.0
margin_bottom = 39.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "save all"
icon = ExtResource( 12 )

[node name="Control" type="Control" parent="AppView/HBoxContainer/VSplitContainer"]
margin_top = 47.0
margin_right = 965.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="AppView/HBoxContainer/VSplitContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="actions" type="HBoxContainer" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer"]
margin_right = 965.0
margin_bottom = 32.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 30 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
save_button_path = NodePath("Save")
tap_container_path = NodePath("../HSplitContainer/RightPanel/VBoxContainer/CustomTabContainer")

[node name="emptyLeft" type="Control" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/actions"]
margin_right = 10.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="more" type="ToolButton" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/actions"]
margin_left = 14.0
margin_right = 44.0
margin_bottom = 32.0
rect_min_size = Vector2( 30, 0 )
icon = ExtResource( 14 )
expand_icon = true
script = ExtResource( 16 )
to = NodePath("../../HSplitContainer/LeftPanel")

[node name="sync" type="ToolButton" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/actions"]
margin_left = 48.0
margin_right = 78.0
margin_bottom = 32.0
rect_min_size = Vector2( 30, 0 )
rect_pivot_offset = Vector2( 13.687, 14.837 )
icon = ExtResource( 15 )
align = 0
expand_icon = true

[node name="emptyCenter" type="Control" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/actions"]
margin_left = 82.0
margin_right = 790.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="SaveAll" type="ToolButton" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/actions"]
margin_left = 794.0
margin_right = 881.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "save all"
icon = ExtResource( 12 )

[node name="Save" type="ToolButton" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/actions"]
margin_left = 885.0
margin_right = 951.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
shortcut = ExtResource( 13 )
text = "save"
icon = ExtResource( 10 )

[node name="emptyRight" type="Control" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/actions"]
margin_left = 955.0
margin_right = 965.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="HSeparator" type="HSeparator" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer"]
margin_top = 36.0
margin_right = 965.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 10 )
custom_constants/separation = 5

[node name="HSplitContainer" type="HSplitContainer" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer"]
margin_top = 50.0
margin_right = 965.0
margin_bottom = 553.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
split_offset = 173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPanel" type="Panel" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer"]
margin_right = 173.0
margin_bottom = 503.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer"]
visible = false
margin_right = 173.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 1 )
text = "Ì†ΩÌ≥ÅCollections"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer"]
visible = false
margin_top = 17.0
margin_right = 173.0
margin_bottom = 37.0
text = "+ New http"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer"]
visible = false
margin_right = 173.0
margin_bottom = 20.0
text = "+ New socket"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer"]
margin_right = 173.0
margin_bottom = 503.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/item_margin = 10
custom_constants/vseparation = 5
custom_constants/hseparation = 5
allow_reselect = true
allow_rmb_select = true
drop_mode_flags = 3
select_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
contents_model_node = NodePath("contents_table_view")
_tab_container_path = NodePath("../../../RightPanel/VBoxContainer/CustomTabContainer")
_options_context_node = NodePath("../../../../../../../../../PopupMenu")

[node name="requests_table" type="Node" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer/Tree"]
script = ExtResource( 11 )
tablename = "requests"

[node name="contents_table_view" type="Node" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer/Tree"]
script = ExtResource( 11 )
tablename = "contents"

[node name="node_data_table" type="Node" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer/Tree"]
script = ExtResource( 11 )
tablename = "node_data"

[node name="nodes_table" type="Node" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer/Tree"]
script = ExtResource( 11 )
tablename = "nodes"

[node name="RightPanel" type="Panel" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer"]
margin_left = 181.0
margin_right = 965.0
margin_bottom = 503.0

[node name="VBoxContainer" type="VBoxContainer" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Tabs" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/RightPanel/VBoxContainer"]
margin_right = 784.0
margin_bottom = 24.0
tab_align = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomTabContainer" type="TabContainer" parent="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/RightPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 784.0
margin_bottom = 503.0
size_flags_vertical = 3
tab_align = 0
tabs_visible = false
all_tabs_in_front = true
drag_to_rearrange_enabled = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
tabs = NodePath("../Tabs")

[node name="Dialogs" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
input_pass_on_modal_close_click = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
open_file_node = NodePath("FileDialog")
open_folder_node = NodePath("FileDialog")
project_view_node = NodePath("../AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer/Tree")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -70.0
margin_right = 80.0
margin_bottom = 66.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "New request.."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Dialogs/ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 213.0
margin_bottom = 98.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Dialogs/ConfirmationDialog/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 17.0
margin_top = 3.5
margin_right = -17.0
margin_bottom = 23.5
size_flags_vertical = 0
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Dialogs/ConfirmationDialog/Control"]
anchor_right = 1.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -105.0
margin_right = 256.0
margin_bottom = 106.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( ".spd", "", "" )
current_dir = "/home/bhavesh/Work/explorationProjects/speedpost"
current_path = "/home/bhavesh/Work/explorationProjects/speedpost/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tobborder" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Tobborder"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Tobborder/Panel"]
margin_left = 989.072
margin_top = 6.41413
margin_right = 1015.07
margin_bottom = 28.4141
custom_styles/normal = SubResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Tobborder/Panel"]
margin_left = 954.276
margin_top = 6.41413
margin_right = 980.276
margin_bottom = 28.4141
custom_styles/normal = SubResource( 3 )
text = "__"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tobborder/Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.92957
margin_top = -13.5
margin_right = 113.93
margin_bottom = 13.5
text = "SPEEDPOST V0.1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 118.0
margin_bottom = 149.0
custom_constants/vseparation = 8
custom_constants/hseparation = 22
items = [ "Add collection", null, 0, false, false, 0, 0, null, "", false, "Add request", null, 0, false, false, 1, 0, null, "", false, "New Folder", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, true, 3, 0, null, "", true, "Rename", null, 0, false, false, 4, 0, null, "", false, "Delete", null, 0, false, false, 5, 0, null, "", false ]
submenu_popup_delay = 0.278
allow_search = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestsTable" type="Node" parent="."]
script = ExtResource( 11 )

[connection signal="empty_tree_rmb_selected" from="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer/Tree" to="AppView/HBoxContainer/VSplitContainer/Control/VBoxContainer/HSplitContainer/LeftPanel/VBoxContainer/Tree" method="_on_Tree_empty_tree_rmb_selected"]
[connection signal="file_selected" from="Dialogs/FileDialog" to="Dialogs" method="_on_FileDialog_file_selected"]
[connection signal="gui_input" from="Tobborder" to="Tobborder" method="_on_Tobborder_gui_input"]
[connection signal="button_up" from="Tobborder/Panel/Button" to="Tobborder" method="_on_Button_button_up"]
[connection signal="button_up" from="Tobborder/Panel/Button2" to="Tobborder" method="_on_Button2_button_up"]
